# haindy

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG_ASYNCMOCK_ISSUE.md  FIX_GEMINI_CONFIG.md  GRID_TEST_PROGRESS.md  GRID_ZOOM_IMPLEMENTATION_PLAN.md  HAINDY_PLAN.md  LICENSE  PHASE_7A_AUDIT.md  README.md  SECURITY.md  TEST_FAILURE_ANALYSIS.md  TEST_FAILURE_FIX_EXAMPLES.md  TEST_FAILURE_VISUAL_SUMMARY.md  debug_test_plan.json  debug_test_plan.md  failing_test_files.md  final_failing_test_files.md  pyproject.toml  pytest.ini  test_action_type_integration.py  test_failure_analysis.md  test_failure_report.md  test_fix_summary.md  test_output.txt  test_results.txt  test_zoom_grid.py  updated_failing_test_files.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: AGENTS.md  AGENT_ARCHITECTURE_DESIGN.md  COMPLETED_PHASES_DETAILS.md  HAINDY_PLAN.md  PHASE_14_PLAN.md  RUNBOOK.md  VIBE-ENGINEER-GUIDELINES.md  teal_backport_notes.md
docs/demo-rehearsal/: gimp-color-adjustment.md
docs/design/: AGENT_ARCHITECTURE_DESIGN.md  FEEDBACK.md  HAINDY_SYSTEM_ARCHITECTURE.md  INSTALLER_AND_SETUP.md  USER_PATH_DOCS_RESEARCH.md  baa_a_system_architecture_conceptual.md  linkedin_desktop_poc.md
docs/issues/: ruff-modernization-backlog-plan-2026-02-24.md  teal-backport-audit-2026-02-20.md
docs/phases/: PHASE_10B_TEST_SUITE_CLEANUP.md  PHASE_11B_CLI_IMPROVEMENTS.md  PHASE_11_END_TO_END_INTEGRATION.md  PHASE_12_TEST_SCENARIOS.md  PHASE_13_CONVERSATION_BASED_AI_INTERACTIONS.md  PHASE_14_ADDITIONAL_ACTION_TYPES.md  PHASE_14_TEST_PLANNER_REFINEMENT.md  PHASE_15_PACKAGING_DOCUMENTATION.md  PHASE_15_TEST_RUNNER_ENHANCEMENT.md  PHASE_16_COMPLETION_REPORT.md  PHASE_16_DECISION_SUMMARY.md  PHASE_16_EVALUATOR_REASSESSMENT.md  PHASE_17_USABILITY_AND_PERSISTENCE.md  PHASE_18_ADDITIONAL_ACTION_TYPES.md  PHASE_1_CORE_FOUNDATION.md  PHASE_4_ACTION_AGENT.md  PHASE_5_EVALUATOR.md  PHASE_7_AGENT_COORDINATION.md
docs/plans/: HAINDY_PLAN.md  PHASE_17_PLAN.md  data-entry-agent.md  dependency-and-safety-upgrade.md  dry-kiss-refactor-follow-up.md  dry-kiss-refactor-plan.md  fix_wikipedia_test_reporting.md  haindy-actions-computer-use-migration.md  haindy-test-forensics-tool-call.md  linkedin_desktop_poc_plan.md  linkedin_profile_agent.md  macos-desktop-backend.md  openai-gpt-5-4-computer-use-migration-plan.md  provider-neutral-computer-use-turn-result-plan.md  scroll_implementation_example.py  scroll_to_element_design.md  teal-backport-plan.md  windows-support.md
docs/runbook/: linkedin_desktop_poc.md
examples/: action_agent_demo.py  end_to_end_demo.py  error_handling_demo.py  evaluator_demo.py  grid_demo.py  journaling_demo.py  orchestration_demo.py  refactored_demo.py  security_monitoring_demo.py  test_page.html  test_planner_demo.py  test_runner_demo.py  virtual_input_smoketest.py
haindy/: feedback.py  main.py
haindy/agents/: __init__.py  action_agent.py  awareness_agent.py  base_agent.py  formatters.py  scope_triage.py  situational_agent.py  structured_output_schemas.py  test_planner.py  (+8 more)
src/: main.py
test_reports/: test_report_1a55b7ec-339f-4d64-a808-bc3f9e9fa330.json  test_report_1a55b7ec-339f-4d64-a808-bc3f9e9fa330.md  test_report_24714f4e-9f9c-4bd0-9dd2-05e40317c406.json  test_report_24714f4e-9f9c-4bd0-9dd2-05e40317c406.md  test_report_257070a1-f4b5-469c-b6d7-d803a8ff959f.json  test_report_257070a1-f4b5-469c-b6d7-d803a8ff959f.md  test_report_2cffccec-2aa0-4e5d-9c4e-a6ee5c61f310.json  test_report_2cffccec-2aa0-4e5d-9c4e-a6ee5c61f310.md  test_report_5b2ead9f-4f51-45a1-a689-727472157967.json  test_report_5b2ead9f-4f51-45a1-a689-727472157967.md  test_report_6f9d0271-940f-45f9-a19b-17ad112d9aef.json  test_report_6f9d0271-940f-45f9-a19b-17ad112d9aef.md  test_report_85c52c8e-e2ac-4ae2-9aba-694dae1eb7ac.json  test_report_85c52c8e-e2ac-4ae2-9aba-694dae1eb7ac.md  test_report_e22eb54f-b0c4-471d-99e2-73ac284f8a22.json  test_report_e22eb54f-b0c4-471d-99e2-73ac284f8a22.md  test_report_e65f37a4-ef52-407d-91a3-aed0c6f57d98.json  test_report_e65f37a4-ef52-407d-91a3-aed0c6f57d98.md  test_report_ed9c199a-5aad-4d18-8946-1c36be0a7ae9.json  test_report_ed9c199a-5aad-4d18-8946-1c36be0a7ae9.md
test_scenarios/: aubilities-bundles-fmc-admin.md  dropdown_test.json  ecommerce_checkout.json  form_submission.json  generated_wikipedia_search_and_article_content_verification_20250710_152734.json  generated_wikipedia_search_for_artificial_intelligence_20250710_155204.json  generated_wikipedia_search_verification_for_artificial_intelligence_20250710_155736.json  generated_wikipedia_topic_search_validation_20250710_152626.json  google_search.json  linkedin_desktop_poc.json  linkedin_messaging.txt  linkedin_search.txt  login_test.json  navigation_verification.json  wikipedia_search.json  wikipedia_search_simple.txt
tests/: computer_use_session_support.py  conftest.py  support_test_runner.py  test_action_agent.py  test_action_agent_mock_fix.py  test_action_agent_refactored.py  test_action_validation_support.py  test_agent_factory.py  test_analytics.py  test_anthropic_client.py  test_auth.py  test_awareness_agent.py  test_base_agent.py  test_browser_integration.py  test_communication.py  test_computer_use_common.py  test_computer_use_session.py  test_computer_use_session_anthropic.py  test_computer_use_session_google_flow.py  test_computer_use_session_google_helpers.py  test_computer_use_session_google_runtime.py  test_computer_use_session_guardrails.py  test_computer_use_session_openai_flow.py  test_computer_use_turn_result.py  test_computer_use_visual_state.py  test_config.py  test_coordinate_cache.py  test_coordinate_reference.py  test_coordinator.py  test_core_types.py  test_credentials.py  test_desktop_driver.py  test_end_to_end_integration.py  test_enhanced_error_reporting.py  test_enhanced_reporter.py  test_enhanced_types.py  test_error_aggregator.py  test_error_exceptions.py  test_error_recovery.py  test_error_validation.py  (+60 more)
(+327 files in other folders)
